<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".account_creation.SignUpActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/to_personalize_your_meals_we_need_a_few_quick_details"
        android:textColor="@color/text"
        android:textSize="23sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_medium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="630dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        android:layout_marginTop="10dp"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:fontFamily="@font/sf_medium"
                app:layout_constraintStart_toStartOf="@id/input_age"
                app:layout_constraintBottom_toTopOf="@id/input_age"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/input_age"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:importantForAutofill="no"
                android:hint="@string/enter_age"
                android:fontFamily="@font/sf_regular"
                android:textColor="@color/text"
                android:maxLength="3"
                android:textColorHint="@color/hint_text"
                android:textSize="16sp"
                android:inputType="number"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/input_field"
                android:layout_marginTop="30dp"
                android:padding="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:fontFamily="@font/sf_medium"
                app:layout_constraintStart_toStartOf="@id/input_gender"
                app:layout_constraintBottom_toTopOf="@id/input_gender"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"/>

            <Spinner
                android:id="@+id/input_gender"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:background="@drawable/input_field"
                android:padding="16dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@id/input_age"
                app:layout_constraintTop_toTopOf="@id/input_age"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="@id/input_age"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ditery_type"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:fontFamily="@font/sf_medium"
                app:layout_constraintStart_toStartOf="@id/ditery_type"
                app:layout_constraintBottom_toTopOf="@id/ditery_type"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"/>

            <Spinner
                android:id="@+id/ditery_type"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:background="@drawable/input_field"
                android:padding="16dp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@id/input_age"
                app:layout_constraintStart_toStartOf="@id/input_age"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_amp_fitness_goals"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:fontFamily="@font/sf_medium"
                app:layout_constraintStart_toStartOf="@id/health"
                app:layout_constraintBottom_toTopOf="@id/health"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"/>

            <Spinner
                android:id="@+id/health"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:background="@drawable/input_field"
                android:padding="16dp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@id/ditery_type"
                app:layout_constraintStart_toStartOf="@id/ditery_type"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/allergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergies_amp_restrictions"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:fontFamily="@font/sf_medium"
                app:layout_constraintStart_toStartOf="@id/health"
                app:layout_constraintTop_toBottomOf="@id/health"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/allergy_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/health"
                app:layout_constraintTop_toBottomOf="@id/allergy"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:alignItems="flex_start">

                <!-- Lactose Intolerance -->
                <CheckBox
                    android:id="@+id/chip_lactose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lactose_intolerance"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:button="@null"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <!-- Gluten Allergy -->
                <CheckBox
                    android:id="@+id/chip_gluten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_allergy"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <!-- Nut Allergy -->
                <CheckBox
                    android:id="@+id/chip_nut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nut_allergy"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <!-- Soy Allergy -->
                <CheckBox
                    android:id="@+id/chip_soy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soy_allergy"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <!-- Shellfish Allergy -->
                <CheckBox
                    android:id="@+id/chip_shellfish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shellfish_allergy"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <!-- No Spicy Food -->
                <CheckBox
                    android:id="@+id/chip_spicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_spicy_food"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <!-- No Fried Food -->
                <CheckBox
                    android:id="@+id/chip_fried"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_fried_food"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <CheckBox
                    android:id="@+id/no_allergy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_allergies"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

            </com.google.android.flexbox.FlexboxLayout>

            <TextView
                android:id="@+id/cuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuisine_preferences"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:fontFamily="@font/sf_medium"
                app:layout_constraintStart_toStartOf="@id/health"
                app:layout_constraintTop_toBottomOf="@id/allergy_group"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/cuisine_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/health"
                app:layout_constraintTop_toBottomOf="@id/cuisine"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                android:layout_marginBottom="20dp"
                app:alignItems="flex_start">

                <CheckBox
                    android:id="@+id/chip_indian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indian_north_south"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <CheckBox
                    android:id="@+id/chip_chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chinese"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <CheckBox
                    android:id="@+id/chip_continental"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continental"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <CheckBox
                    android:id="@+id/chip_mediterranean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mediterranean"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <CheckBox
                    android:id="@+id/chip_thai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thai"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <CheckBox
                    android:id="@+id/chip_japanese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/japanese"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <CheckBox
                    android:id="@+id/chip_mexican"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mexican"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>

                <CheckBox
                    android:id="@+id/chip_italian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/italian"
                    android:button="@null"
                    android:background="@drawable/chip_background"
                    android:textColor="@drawable/chip_text_color"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_margin="8dp"/>
            </com.google.android.flexbox.FlexboxLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/btn_done"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:src="@drawable/btn_done"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"/>

    <ProgressBar
        android:id="@+id/done_bar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="@id/btn_done"
        app:layout_constraintEnd_toEndOf="@id/btn_done"
        app:layout_constraintTop_toTopOf="@id/btn_done"
        app:layout_constraintBottom_toBottomOf="@id/btn_done"
        android:visibility="gone"
        android:indeterminateTint="@color/text"/>

</androidx.constraintlayout.widget.ConstraintLayout>

