<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".account_creation.MobileLoginActivity">

    <ImageView
        android:id="@+id/back"
        android:contentDescription="@string/app_name"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_mobile_number_amp_name_to_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        android:layout_marginTop="30dp"
        android:textColor="@color/text"
        android:textSize="23sp"
        android:fontFamily="@font/sf_bold"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:fontFamily="@font/sf_medium"
        app:layout_constraintStart_toStartOf="@id/input_layout"
        app:layout_constraintBottom_toTopOf="@id/input_layout"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:ccp_defaultNameCode="IN"
            app:ccp_showNameCode="false"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/input_field"
            app:ccp_showFlag="true"
            app:ccp_showFullName="false" />

        <EditText
            android:id="@+id/input_no"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:importantForAutofill="no"
            android:hint="@string/enter_mobile_number"
            android:maxLength="11"
            android:fontFamily="@font/sf_regular"
            android:textColor="@color/text"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/hint_text"
            android:textSize="16sp"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:background="@drawable/input_field"
            android:padding="16dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:fontFamily="@font/sf_medium"
        app:layout_constraintStart_toStartOf="@id/input_name"
        app:layout_constraintBottom_toTopOf="@id/input_name"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/input_name"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:importantForAutofill="no"
        android:hint="@string/enter_your_name"
        android:fontFamily="@font/sf_regular"
        android:textColor="@color/text"
        android:textColorHint="@color/hint_text"
        android:textSize="16sp"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="@id/input_layout"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        android:background="@drawable/input_field"
        android:layout_marginTop="50dp"
        android:padding="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:fontFamily="@font/sf_medium"
        app:layout_constraintStart_toStartOf="@id/input_password"
        app:layout_constraintBottom_toTopOf="@id/input_password"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:importantForAutofill="no"
        android:hint="@string/enter_password"
        android:fontFamily="@font/sf_regular"
        android:textColor="@color/text"
        android:textColorHint="@color/hint_text"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="@id/input_name"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        android:background="@drawable/input_field"
        android:layout_marginTop="50dp"
        android:padding="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:fontFamily="@font/sf_medium"
        app:layout_constraintStart_toStartOf="@id/input_confirm_password"
        app:layout_constraintBottom_toTopOf="@id/input_confirm_password"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/input_confirm_password"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:importantForAutofill="no"
        android:hint="@string/enter_password"
        android:fontFamily="@font/sf_regular"
        android:textColor="@color/text"
        android:textColorHint="@color/hint_text"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toStartOf="@id/input_password"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        android:background="@drawable/input_field"
        android:layout_marginTop="50dp"
        android:padding="16dp"/>

    <ImageView
        android:id="@+id/btn_create"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:src="@drawable/btn_create_account"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/input_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <ProgressBar
        android:id="@+id/create_bar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="@id/btn_create"
        app:layout_constraintEnd_toEndOf="@id/btn_create"
        app:layout_constraintTop_toTopOf="@id/btn_create"
        app:layout_constraintBottom_toBottomOf="@id/btn_create"
        android:visibility="gone"
        android:indeterminateTint="@color/text"/>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_create"
        app:layout_constraintTop_toBottomOf="@id/btn_create"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/text"
            android:fontFamily="@font/sf_regular"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#0055FF"
            android:fontFamily="@font/sf_medium"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>