<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".GetStartedActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eat_smart_live_healthy"
        android:textColor="@color/text"
        android:fontFamily="@font/sf_bold"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/get_started_img"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:fontFamily="@font/sf_regular"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/btn_get_started"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:src="@drawable/btn_get_started"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>